# libusb_dev_cpp

./: CMakeLists.txt  README.md
include/libusb_dev_cpp/: usb_common.hpp  usb_core.hpp  usb_desc.hpp  usb_std.hpp
include/libusb_dev_cpp/class/: usb_class.hpp
include/libusb_dev_cpp/class/cdc/: cdc.hpp  cdc_desc.hpp  cdc_mgmt_requests.hpp  cdc_notification.hpp  cdc_usb.hpp
include/libusb_dev_cpp/class/dfu/: dfu.hpp
include/libusb_dev_cpp/core/: Control_request.hpp  Get_descriptor.hpp  Notification_packet.hpp  Request_type.hpp  Setup_packet.hpp  usb_common.hpp  usb_core.hpp
include/libusb_dev_cpp/descriptor/: Binary_object_store.hpp  Configuration_descriptor.hpp  Descriptor_base.hpp  Device_capability.hpp  Device_descriptor.hpp  Endpoint_descriptor.hpp  Interface_association_descriptor.hpp  Interface_descriptor.hpp  String_descriptor.hpp  String_descriptor_base.hpp  String_descriptor_var.hpp
include/libusb_dev_cpp/driver/: CPU_base.hpp  cpu_base.hpp  usb_driver_base.hpp
include/libusb_dev_cpp/driver/cpu/: Cortex_m7.hpp
include/libusb_dev_cpp/driver/stm32/: stm32_h7xx_otghs.hpp  stm32_h7xx_otghs2.hpp
include/libusb_dev_cpp/util/: Buffer_adapter.hpp  Config_desc_table.hpp  Desc_table_base.hpp  Descriptor_table.hpp  EP_buffer_array.hpp  EP_buffer_mgr.hpp  EP_buffer_mgr_base.hpp  EP_buffer_mgr_freertos.hpp  Endpoint_desc_table.hpp  Iface_desc_table.hpp  String_desc_table.hpp
src/: usb_core.cpp  usb_std.cpp
src/class/: usb_class.cpp
src/class/cdc/: cdc.cpp  cdc_desc.cpp  cdc_mgmt_requests.cpp  cdc_notification.cpp  cdc_usb.cpp
src/class/dfu/: dfu.cpp
src/core/: Control_request.cpp  Get_descriptor.cpp  Notification_packet.cpp  Request_type.cpp  Setup_packet.cpp  usb_common.cpp  usb_core.cpp
src/descriptor/: Binary_object_store.cpp  Configuration_descriptor.cpp  Device_capability.cpp  Device_descriptor.cpp  Endpoint_descriptor.cpp  Interface_association_descriptor.cpp  Interface_descriptor.cpp  String_descriptor.cpp  String_descriptor_base.cpp
src/driver/: cpu_base.cpp  usb_driver_base.cpp
src/driver/cpu/: Cortex_m7.cpp
src/driver/stm32/: stm32_h7xx_otghs.cpp  stm32_h7xx_otghs2.cpp
src/util/: Buffer_adapter.cpp  Config_desc_table.cpp  Desc_table_base.cpp  Descriptor_table.cpp  EP_buffer_array.cpp  EP_buffer_mgr.cpp  EP_buffer_mgr_base.cpp  EP_buffer_mgr_freertos.cpp  Endpoint_desc_table.cpp  Iface_desc_table.cpp  String_desc_table.cpp
tests/descriptor/: Endpoint_descriptor_tests.cpp
